money maa2 changes

--- a/about.html
+++ b/about.html
@@ -6,8 +6,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
       <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="pages.css">
@@ -45,7 +43,7 @@
     <div class="header-area">
         <div id="sticky-wrapper" class="sticky-wrapper" style="height: 90px;"><div class="sticky-area">
             <div class="navigation">
-                <div class="container header-container">
+                <div class="container">
                     <div class="header-inner-box">     
 
                         <div class="logo">
@@ -74,39 +72,36 @@
                                             <a class="nav-link" href="#">Services
                                                 <span class="sub-nav-toggler"> </span>
                                             <button class="sub-nav-toggler"> <i class="fa-solid fa-angle-down"></i> </button></a>
-                                            <ul class="sub-menu">
+                                            <ul class="sub-menu">                                             
+                                                <li>
+                                                    <a href="dmat.html">DEMAT</a>
+                                                </li>  
+                                                <li>
+                                                    <a href="health-insurance.html">Health Insurance</a>
+                                                </li>  
                                                 <li>
                                                     <a href="mutual-funds.html">Mutual Funds </a>
-                                                </li>
+                                                </li>                                              
+                                                <li>
+                                                    <a href="life-insurance.html">Term Plan Insurance</a>
+                                                </li>    
                                                 <li>
                                                     <a href="child-future-saving.html">Child Future Saving</a>
                                                 </li>                                                
                                                 <li>
                                                     <a href="retirement-saving.html">Retirement Planning</a>
-                                                </li>                                                
-                                                <li>
-                                                    <a href="life-insurance.html">Life Insurance</a>
-                                                </li>                                               
-                                                <li>
-                                                    <a href="health-insurance.html">Health Insurance</a>
-                                                </li>                                               
-                                                <li>
-                                                    <a href="home-insurance.html">Home Insurance</a>
-                                                </li>                                               
-                                                <li>
-                                                    <a href="motor-insurance.html">Motor Insurance</a>
-                                                </li>                                               
-                                                <li>
-                                                    <a href="com-property.html">Commercial Property Insurance</a>
-                                                </li>                                               
-                                                <li>
-                                                    <a href="bonds.html">Bonds</a>
-                                                </li>                                                
+                                                </li>                                                 
                                                 <li>
                                                     <a href="pms-aif.html">PMS</a>
-                                                </li>                                                 
+                                                </li>    
+                                                <li>
+                                                    <a href="general-insurance.html">Other Insurance</a>
+                                                </li>                                             
+                                                <li>
+                                                    <a href="itr.html">ITR</a>
+                                                </li>                                             
                                             </ul>
-                                        </li>                                                            
+                                        </li>                                                              
                                         <li class="nav-item">
                                             <a class="nav-link" href="calculators.html">Financial Calculators</a>
                                         </li>
@@ -125,6 +120,9 @@
                 </div>
             </div>
         </div></div>
+        <!-- <div class="header_right_bg">
+            <img src="images/top_right_bg.png" alt="">
+        </div> -->
     </div>
 
     <!-- mobile header -->
@@ -185,16 +183,16 @@
 
     <!-- breadcrumb section -->
 
-    <div class="breadcrumb-area section-padding light-bg-1 pb-0">
-        <div class="container header-container">
-            <div class="row">
+    <div class="breadcrumb-area section-padding pb-0">
+        <div class="container">
+            <!-- <div class="row">
                 <div class="col-12">
                     <div class="bread-bg">
                         <img src="images/about-img.jpg" alt="" style="width: 100%;">
                     </div>
                 </div>
-            </div>
-            <div class="row mt-90">
+            </div> -->
+            <div class="row mt-60">
                 <div class="col-xl-9 col-lg-9 col-md-9 col-12">
                     <div class="section-title">
                         <p>More About Us</p>
@@ -203,7 +201,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-xl-6 col-lg-6 col-md-6 col-12">
                     <div class="direction-img">
                         <img src="images/shape-about.png" alt="">
@@ -213,8 +211,8 @@
                     <h3>Our History &amp; Goal.</h3>
                     <p>Money Maa started 8 years ago is simple yet powerful – to provide the community with a better life through proper financial planning. She understands firsthand the challenges individuals face during their financial journey, having experienced financial stress herself while navigating the beautiful yet demanding path of motherhood. </p>
                 </div>
-            </div>
-            <div class="row mt-90">
+            </div> -->
+            <div class="row align-items-center ">
                 <div class="col-lg-3">
                     <img src="images/gayatree-lohiya.jpeg" alt="">
                 </div>
@@ -239,8 +237,8 @@
 
         <!-- feature section -->
     
-        <div class="feature-section section-padding pb-0">
-            <div class="container header-container">
+        <div class="feature-section section-padding">
+            <div class="container">
                 <div class="row">
                     <div class="col-xl-12 text-center">
                         <div class="section-title">
@@ -257,7 +255,7 @@
                                 <img src="images/badge-white.png" alt="">
                             </div>
                             <div class="feature-content">
-                                <h4>Quality Services</h4>
+                                <h4>Prompt Service</h4>
                                 <p>Experience excellence with our quality-driven financial services, where precision meets personalized solutions.</p>
                             </div>
                         </div>
@@ -268,7 +266,7 @@
                                 <img src="images/002-group-w.png" alt="">
                             </div>
                             <div class="feature-content">
-                                <h4>Professional Team</h4>
+                                <h4>Hassle-free Process</h4>
                                 <p>We are committed to ensuring your financial success with a knowledgeable and trustworthy approach.</p>
                             </div>
                         </div>
@@ -294,7 +292,7 @@
 
 
         <div class="about-section about-two section-padding">
-            <div class="container header-container">
+            <div class="container">
                 <div class="row">
                     <div class="col-xl-6 col-lg-6 col-12 wow fadeInDown reveal" data-wow-delay="200ms" style="animation-delay: 200ms;">
                         <div class="about-left-wrap">
@@ -356,7 +354,7 @@
 
     <!-- contact section -->
 
-    <div class="contact-area section-padding about-contact-area">
+    <!-- <div class="contact-area section-padding about-contact-area">
         <div class="container header-container">
             <div class="contact-section-inner">
                 <div class="contact-section-content">
@@ -366,12 +364,12 @@
                 </div>                
             </div>
         </div>    
-    </div>
+    </div> -->
 
 
     <!-- footer section -->
 
-    <div class="footer-area">
+    <div class="footer-area section-padding light-bg-2">
         <div class="container header-container">
             <div class="row">
                 <div class="col-xl-3 col-lg-3 col-md-5 col-12 wow fadeInUp reveal" data-wow-delay="200ms" style="animation-delay: 200ms;">
@@ -392,43 +390,41 @@
                     </div>
                 </div>
                 <div class="offset-xl-1 col-xl-6 col-lg-6 col-md-6 col-12 wow fadeInUp reveal" data-wow-delay="200ms" style="animation-delay: 200ms;">
-                     <div class="footer-widget">
-                        <div class="row">
-                            <div class="col-md-4">
-                                <div class="services-list">
-                                    <h5>Our Services</h5>
-                                    <ul>
-                                        <li><i class="fa-solid fa-check-circle"></i><a href="mutual-funds.html">Mutual Fund</a></li>
-                                        <li><i class="fa-solid fa-check-circle"></i><a href="child-future-saving.html">Child Future Saving</a></li>
-                                        <li><i class="fa-solid fa-check-circle"></i><a href="retirement-saving.html">Retirement Planning</a></li>
-                                        
-                                        <li><i class="fa-solid fa-check-circle"></i><a href="bonds.html">Bonds</a></li>
-                                        <li><i class="fa-solid fa-check-circle"></i><a href="pms-aif.html">PMS</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="col-md-4">
-                                <div class="services-list mt-5 service-list2">
-                                    <ul class="pt-4 service2-ul">
-                                        <li><i class="fa-solid fa-check-circle"></i><a href="life-insurance.html">Life Insurance</a></li>
+                    <div class="footer-widget">
+                       <div class="row">
+                           <div class="col-md-4">
+                               <div class="services-list">
+                                   <h5>Our Services</h5>
+                                   <ul>
+                                       <li><i class="fa-solid fa-check-circle"></i><a href="dmat.html">Demat</a></li>
+                                       <li><i class="fa-solid fa-check-circle"></i><a href="mutual-funds.html">Mutual Fund</a></li>
+                                       <li><i class="fa-solid fa-check-circle"></i><a href="child-future-saving.html">Child Future Saving</a></li>
+                                       <li><i class="fa-solid fa-check-circle"></i><a href="retirement-saving.html">Retirement Planning</a></li>
+                                       <li><i class="fa-solid fa-check-circle"></i><a href="pms-aif.html">PMS</a></li>
+                                   </ul>
+                               </div>
+                           </div>
+                           <div class="col-md-4">
+                               <div class="services-list mt-5 service-list2">
+                                   <ul class="pt-4 service2-ul">
                                         <li><i class="fa-solid fa-check-circle"></i><a href="health-insurance.html">Health Insurance</a></li>
-                                        <li><i class="fa-solid fa-check-circle"></i><a href="home-insurance.html">Home Insurance</a></li>
-                                        <li><i class="fa-solid fa-check-circle"></i><a href="motor-insurance.html">Motor Insurance</a></li>
-                                        <li><i class="fa-solid fa-check-circle"></i><a href="com-property.html">Commercial Insurance</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="col-md-4">
-                                <div class="footer-contact-info">
-                                    <h5>Contact Us</h5>
-                                    <p class="address">FWR2+C39, Sacred Mall , Wanowrie, Pune, Maharashtra 411040</p>
-                                    <p class="number">+91 9890655909 / +91 9922255681</p>
-                                    <p class="email">futuremaipaisa@gmail.com</p>
-                                </div>
-                            </div>
-                        </div>
-                     </div>   
-                </div>
+                                       <li><i class="fa-solid fa-check-circle"></i><a href="life-insurance.html">Term Plan Insurance</a></li>
+                                       <li><i class="fa-solid fa-check-circle"></i><a href="home-insurance.html">Other Insurance</a></li>
+                                       <li><i class="fa-solid fa-check-circle"></i><a href="com-property.html">ITR Filing</a></li>
+                                   </ul>
+                               </div>
+                           </div>
+                           <div class="col-md-4">
+                               <div class="footer-contact-info">
+                                   <h5>Contact Us</h5>
+                                   <p class="address">FWR2+C39, Sacred Mall , Wanowrie, Pune, Maharashtra 411040</p>
+                                   <p class="number">+91 9890655909 / +91 9922255681</p>
+                                   <p class="email">futuremaipaisa@gmail.com</p>
+                               </div>
+                           </div>
+                       </div>
+                    </div>   
+               </div>
                 <!-- <div class="col-xl-3 col-lg-3 col-12 wow fadeInUp reveal" data-wow-delay="600ms" style="animation-delay: 600ms;">
                     <div class="footer-widget">
                         <div class="project-gallery">
