--- a/motor-insurance.html
+++ b/motor-insurance.html
@@ -45,7 +45,7 @@
     <div class="header-area">
         <div id="sticky-wrapper" class="sticky-wrapper" style="height: 90px;"><div class="sticky-area">
             <div class="navigation">
-                <div class="container header-container">
+                <div class="container-fluid p-0 m-0">
                     <div class="header-inner-box">     
 
                         <div class="logo">
@@ -66,45 +66,42 @@
                                             <a class="nav-link" href="index.html">Home</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="about.html">About Us
+                                            <a class="nav-link active" href="about.html">About Us
                                                 </a>
                                         </li> 
                                         
                                         <li class="nav-item">
-                                            <a class="nav-link active" href="#">Services
+                                            <a class="nav-link" href="#">Services
                                                 <span class="sub-nav-toggler"> </span>
                                             <button class="sub-nav-toggler"> <i class="fa-solid fa-angle-down"></i> </button></a>
-                                            <ul class="sub-menu">
+                                            <ul class="sub-menu">                                             
+                                                <li>
+                                                    <a href="dmat.html">DEMAT</a>
+                                                </li>  
+                                                <li>
+                                                    <a href="health-insurance.html">Health Insurance</a>
+                                                </li>  
                                                 <li>
                                                     <a href="mutual-funds.html">Mutual Funds </a>
-                                                </li>
+                                                </li>                                              
+                                                <li>
+                                                    <a href="life-insurance.html">Term Plan Insurance</a>
+                                                </li>    
                                                 <li>
                                                     <a href="child-future-saving.html">Child Future Saving</a>
                                                 </li>                                                
                                                 <li>
                                                     <a href="retirement-saving.html">Retirement Planning</a>
-                                                </li>                                                
-                                                <li>
-                                                    <a href="life-insurance.html">Life Insurance</a>
-                                                </li>                                               
-                                                <li>
-                                                    <a href="health-insurance.html">Health Insurance</a>
-                                                </li>                                               
-                                                <li>
-                                                    <a href="home-insurance.html">Home Insurance</a>
-                                                </li>                                               
-                                                <li>
-                                                    <a href="motor-insurance.html" class="active">Motor Insurance</a>
-                                                </li>                                               
-                                                <li>
-                                                    <a href="com-property.html">Commercial Property Insurance</a>
-                                                </li>                                               
-                                                <li>
-                                                    <a href="bonds.html">Bonds</a>
-                                                </li>                                                
+                                                </li>                                                 
                                                 <li>
                                                     <a href="pms-aif.html">PMS</a>
-                                                </li>                                                 
+                                                </li>    
+                                                <li>
+                                                    <a href="general-insurance.html">Other Insurance</a>
+                                                </li>                                             
+                                                <li>
+                                                    <a href="itr.html">ITR</a>
+                                                </li>                                             
                                             </ul>
                                         </li>                                                              
                                         <li class="nav-item">
@@ -125,6 +122,9 @@
                 </div>
             </div>
         </div></div>
+        <!-- <div class="header_right_bg">
+            <img src="images/top_right_bg.png" alt="">
+        </div> -->
     </div>
 
         <!-- mobile header -->
