--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
     <div class="header-area">
         <div id="sticky-wrapper" class="sticky-wrapper" style="height: 90px;"><div class="sticky-area">
             <div class="navigation">
-                <div class="container header-container">
+                <div class="container">
                     <div class="header-inner-box">     
 
                         <div class="logo">
@@ -74,37 +74,34 @@
                                             <a class="nav-link" href="#">Services
                                                 <span class="sub-nav-toggler"> </span>
                                             <button class="sub-nav-toggler"> <i class="fa-solid fa-angle-down"></i> </button></a>
-                                            <ul class="sub-menu">
+                                            <ul class="sub-menu">                                             
+                                                <li>
+                                                    <a href="dmat.html">DEMAT</a>
+                                                </li>  
+                                                <li>
+                                                    <a href="health-insurance.html">Health Insurance</a>
+                                                </li>  
                                                 <li>
                                                     <a href="mutual-funds.html">Mutual Funds </a>
-                                                </li>
+                                                </li>                                              
+                                                <li>
+                                                    <a href="life-insurance.html">Term Plan Insurance</a>
+                                                </li>    
                                                 <li>
                                                     <a href="child-future-saving.html">Child Future Saving</a>
                                                 </li>                                                
                                                 <li>
                                                     <a href="retirement-saving.html">Retirement Planning</a>
-                                                </li>                                                
-                                                <li>
-                                                    <a href="life-insurance.html">Life Insurance</a>
-                                                </li>                                               
-                                                <li>
-                                                    <a href="health-insurance.html">Health Insurance</a>
-                                                </li>                                               
-                                                <li>
-                                                    <a href="home-insurance.html">Home Insurance</a>
-                                                </li>                                               
-                                                <li>
-                                                    <a href="motor-insurance.html">Motor Insurance</a>
-                                                </li>                                               
-                                                <li>
-                                                    <a href="com-property.html">Commercial Property Insurance</a>
-                                                </li>                                               
-                                                <li>
-                                                    <a href="bonds.html">Bonds</a>
-                                                </li>                                                
+                                                </li>                                                 
                                                 <li>
                                                     <a href="pms-aif.html">PMS</a>
-                                                </li>                                                 
+                                                </li>    
+                                                <li>
+                                                    <a href="general-insurance.html">Other Insurance</a>
+                                                </li>                                             
+                                                <li>
+                                                    <a href="itr.html">ITR</a>
+                                                </li>                                             
                                             </ul>
                                         </li>                                                              
                                         <li class="nav-item">
@@ -125,6 +122,9 @@
                 </div>
             </div>
         </div></div>
+        <!-- <div class="header_right_bg">
+            <img src="images/top_right_bg.png" alt="">
+        </div> -->
     </div>
 
         <!-- mobile header -->
@@ -185,8 +185,8 @@
 
     <!-- breadcrumb section -->
 
-    <div class="breadcrumb-area services contact section-padding light-bg-1 pb-0">
-        <div class="container header-container">
+    <div class="breadcrumb-area services contact section-padding">
+        <div class="container">
             <div class="row justify-content-center">
                 <div class="col-xl-10 col-lg-10 col-md-10 col-12 text-center">
                     <div class="section-title">
@@ -201,7 +201,7 @@
     <!-- contact page -->
 
     <div class="contact-page section-padding light-bg-1">
-        <div class="container header-container">            
+        <div class="container">            
             <div class="contact-page-inner white-bg">
                 <div class="row">                
                     <div class="col-xl-6 col-lg-6 col-md-6">
@@ -265,7 +265,7 @@
     <!-- contact section -->
 
     <div class="contact-area about-contact-area section-padding">
-        <div class="container header-container">
+        <div class="container">
             <div class="contact-section-inner">
                 <div class="contact-section-content">
                     <h2 class="text-white">Want to work with us?</h2>
@@ -279,7 +279,7 @@
 
     <!-- footer section -->
 
-    <div class="footer-area">
+    <div class="footer-area section-padding light-bg-1">
         <div class="container header-container">
             <div class="row">
                 <div class="col-xl-3 col-lg-3 col-md-5 col-12 wow fadeInUp reveal" data-wow-delay="200ms" style="animation-delay: 200ms;">
@@ -306,11 +306,10 @@
                                <div class="services-list">
                                    <h5>Our Services</h5>
                                    <ul>
+                                       <li><i class="fa-solid fa-check-circle"></i><a href="dmat.html">Demat</a></li>
                                        <li><i class="fa-solid fa-check-circle"></i><a href="mutual-funds.html">Mutual Fund</a></li>
                                        <li><i class="fa-solid fa-check-circle"></i><a href="child-future-saving.html">Child Future Saving</a></li>
                                        <li><i class="fa-solid fa-check-circle"></i><a href="retirement-saving.html">Retirement Planning</a></li>
-                                       
-                                       <li><i class="fa-solid fa-check-circle"></i><a href="bonds.html">Bonds</a></li>
                                        <li><i class="fa-solid fa-check-circle"></i><a href="pms-aif.html">PMS</a></li>
                                    </ul>
                                </div>
@@ -318,11 +317,10 @@
                            <div class="col-md-4">
                                <div class="services-list mt-5 service-list2">
                                    <ul class="pt-4 service2-ul">
-                                       <li><i class="fa-solid fa-check-circle"></i><a href="life-insurance.html">Life Insurance</a></li>
-                                       <li><i class="fa-solid fa-check-circle"></i><a href="health-insurance.html">Health Insurance</a></li>
-                                       <li><i class="fa-solid fa-check-circle"></i><a href="home-insurance.html">Home Insurance</a></li>
-                                       <li><i class="fa-solid fa-check-circle"></i><a href="motor-insurance.html">Motor Insurance</a></li>
-                                       <li><i class="fa-solid fa-check-circle"></i><a href="com-property.html">Commercial Insurance</a></li>
+                                        <li><i class="fa-solid fa-check-circle"></i><a href="health-insurance.html">Health Insurance</a></li>
+                                       <li><i class="fa-solid fa-check-circle"></i><a href="life-insurance.html">Term Plan Insurance</a></li>
+                                       <li><i class="fa-solid fa-check-circle"></i><a href="home-insurance.html">Other Insurance</a></li>
+                                       <li><i class="fa-solid fa-check-circle"></i><a href="com-property.html">ITR Filing</a></li>
                                    </ul>
                                </div>
                            </div>
