--- a/itr.html
+++ b/itr.html
@@ -6,8 +6,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
       <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="pages.css">
@@ -78,8 +76,8 @@
                                                 <li>
                                                     <a href="dmat.html">DEMAT</a>
                                                 </li>  
-                                                <li class="active">
-                                                    <a href="health-insurance.html" class="active">Health Insurance</a>
+                                                <li>
+                                                    <a href="health-insurance.html">Health Insurance</a>
                                                 </li>  
                                                 <li>
                                                     <a href="mutual-funds.html">Mutual Funds </a>
@@ -100,7 +98,7 @@
                                                     <a href="general-insurance.html">Other Insurance</a>
                                                 </li>                                             
                                                 <li>
-                                                    <a href="itr.html">ITR</a>
+                                                    <a href="itr.html" class="active">ITR</a>
                                                 </li>                                             
                                             </ul>
                                         </li>                                                              
@@ -200,9 +198,9 @@
             <div class="row">
                 <div class="col-12">
                     <div class="bread-bg">
-                        <img src="images/health-insurance.jpg" alt="" style="width: 100%;">
+                        <img src="images/itr-banner.jpg" alt="" style="width: 100%;">
                         <div class="bg-tag">
-                            <h2>Health Insurance</h2>
+                            <h2>ITR Filing</h2>
                         </div>
                     </div>
                 </div>
@@ -216,33 +214,36 @@
         <div class="container">
              <div class="col-xl-12">
                  <div class="service-page-content">
-                     <p>In the pursuit of a fulfilling life, one's well-being stands as a cornerstone, and at Money Maa, we recognize the significance of safeguarding your health. Our health insurance solutions go beyond mere coverage – they represent a commitment to ensuring that you and your loved ones have access to quality healthcare without the burden of exorbitant expenses. With rising medical costs and unexpected health challenges, having a robust health insurance plan becomes an essential pillar of your overall financial strategy. <br> <br>
-                        At Money Maa, we offer a range of health insurance options designed to address diverse needs and circumstances. Our plans not only cover hospitalization and medical expenses but also extend to preventive care, wellness initiatives, and, in some cases, critical illness coverage. We understand that every individual is unique, and our health insurance solutions reflect this by providing flexibility and customization. Whether you are a young professional, a growing family, or a retiree, our health insurance plans are tailored to offer the right level of protection for your current lifestyle and future aspirations.</p>
-                     <h2>Benefits of Health Insurance</h2>
+                    <h2>What is ITR Filing?</h2>
+                     <p>Income Tax Returns are documents that individuals or entities submit to the government tax authorities, declaring their taxable income, deductions, and tax liabilities for a specific financial year.
+                        <br> <br>
+                        The process of ITR filing involves gathering relevant financial information, filling out the appropriate tax forms or online portals, and submitting them to the tax authorities within the specified deadline, typically by July 31st of the assessment year in India. It's an essential annual obligation for taxpayers to ensure compliance with tax laws and regulations and to determine the amount of tax owed or refundable. <br> <br>
+                        During ITR filing, taxpayers may also claim deductions and exemptions available under tax laws to reduce their taxable income and overall tax liability. It's essential to file ITR accurately and promptly to avoid penalties or legal consequences and to maintain financial transparency with the tax authorities.</p>
+                     <h2>Benefits of E-filing ITR</h2>
                      <div class="about-feature-list service-list">
                         <div class="row">
                             <div class="col-md-6 col-12">
                                 <ul>
-                                    <li><i class="fa-solid fa-check"></i>Coverage for Prescription Medications</li>
-                                    <p>Health insurance plans often include coverage for prescription medications, reducing the out-of-pocket costs for necessary drugs. This ensures that individuals can afford essential medications for their health conditions.</p>
-                                        <li><i class="fa-solid fa-check"></i>Reduced Out-of-Pocket Expenses</li> 
-                                        <p>Health insurance helps minimize out-of-pocket expenses for covered services. This includes co-payments, deductibles, and co-insurance, making healthcare more affordable and predictable.</p>                                       
+                                    <li><i class="fa-solid fa-check"></i>Convenience</li>
+                                    <p>E-filing allows taxpayers to file their returns from anywhere with an internet connection, eliminating the need to visit physical tax offices or mail paper forms.</p>
+                                        <li><i class="fa-solid fa-check"></i>Faster Processing</li> 
+                                        <p>E-filed returns are processed faster compared to paper filings, leading to quicker acknowledgment of receipt, assessment, and issuance of refunds.</p>                                       
                                 </ul>
                             </div>
                             <div class="col-md-6 col-12">
                                 <ul>
-                                    <li><i class="fa-solid fa-check"></i>Prompt and Efficient Medical Care</li>
-                                    <p>With health insurance, individuals can access medical care promptly, leading to quicker diagnoses and treatment. Timely intervention is crucial for better health outcomes, especially in critical situations.</p>
-                                    <li><i class="fa-solid fa-check"></i>Coverage for Critical Illnesses</li>
-                                    <p>Some health insurance plans offer coverage for critical illnesses such as cancer, heart disease, or stroke. This additional protection ensures that individuals have the financial means to cope with the challenges posed by severe health conditions.</p>
+                                    <li><i class="fa-solid fa-check"></i>Accuracy</li>
+                                    <p>E-filing software often includes built-in validation checks and prompts to ensure accurate data entry, reducing the likelihood of errors or omissions that could result in processing delays or penalties.</p>
+                                    <li><i class="fa-solid fa-check"></i>Cost-Effective</li>
+                                    <p>E-filing eliminates the need for printing, postage, and courier expenses associated with paper filings, resulting in cost savings for both taxpayers and tax authorities.</p>
                                 </ul>
                             </div>
                             <div class="col-md-6 col-12">
                                 <ul>
-                                    <li><i class="fa-solid fa-check"></i>Family Coverage</li>
-                                    <p>Health insurance plans often provide family coverage, ensuring that the health needs of all family members are taken care of under a single policy. This simplifies administration and offers collective protection.</p>
-                                    <li><i class="fa-solid fa-check"></i>Employer Benefits</li>
-                                    <p>Many employers offer health insurance as part of their employee benefits package. This not only attracts and retains talent but also contributes to the overall well-being and productivity of the workforce.</p>
+                                    <li><i class="fa-solid fa-check"></i>Security</li>
+                                    <p> E-filing platforms employ robust security measures such as encryption and multi-factor authentication to safeguard sensitive taxpayer information, reducing the risk of identity theft or fraud.</p>
+                                    <li><i class="fa-solid fa-check"></i>Real-Time Status Updates</li>
+                                    <p>Taxpayers can track the status of their e-filed returns in real-time, including acknowledgment receipt, processing status, and refund disbursement, providing transparency and peace of mind.</p>
                                 </ul>
                             </div>
                         </div>
@@ -371,54 +372,9 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
-
-    <script>
-        var swiper = new Swiper(".mySwiper", {
-          spaceBetween: 10,
-          slidesPerView: 4,
-          freeMode: true,
-          watchSlidesProgress: true,
-        });
-        var swiper2 = new Swiper(".mySwiper2", {
-          spaceBetween: 10,
-          navigation: {
-        nextEl: ".swiper-button-next",
-        prevEl: ".swiper-button-prev",
-      },
-          thumbs: {
-            swiper: swiper,
-          },
-        });
-      </script>
 </body>
 </html>
