--- a/pms-aif.html
+++ b/pms-aif.html
@@ -45,7 +45,7 @@
     <div class="header-area">
         <div id="sticky-wrapper" class="sticky-wrapper" style="height: 90px;"><div class="sticky-area">
             <div class="navigation">
-                <div class="container header-container">
+                <div class="container">
                     <div class="header-inner-box">     
 
                         <div class="logo">
@@ -74,37 +74,34 @@
                                             <a class="nav-link active" href="#">Services
                                                 <span class="sub-nav-toggler"> </span>
                                             <button class="sub-nav-toggler"> <i class="fa-solid fa-angle-down"></i> </button></a>
-                                            <ul class="sub-menu">
+                                            <ul class="sub-menu">                                             
+                                                <li>
+                                                    <a href="dmat.html">DEMAT</a>
+                                                </li>  
+                                                <li>
+                                                    <a href="health-insurance.html">Health Insurance</a>
+                                                </li>  
                                                 <li>
                                                     <a href="mutual-funds.html">Mutual Funds </a>
-                                                </li>
+                                                </li>                                              
+                                                <li>
+                                                    <a href="life-insurance.html">Term Plan Insurance</a>
+                                                </li>    
                                                 <li>
                                                     <a href="child-future-saving.html">Child Future Saving</a>
                                                 </li>                                                
                                                 <li>
                                                     <a href="retirement-saving.html">Retirement Planning</a>
-                                                </li>                                                
-                                                <li>
-                                                    <a href="life-insurance.html">Life Insurance</a>
-                                                </li>                                               
-                                                <li>
-                                                    <a href="health-insurance.html">Health Insurance</a>
-                                                </li>                                               
-                                                <li>
-                                                    <a href="home-insurance.html">Home Insurance</a>
-                                                </li>                                               
-                                                <li>
-                                                    <a href="motor-insurance.html">Motor Insurance</a>
-                                                </li>                                               
-                                                <li>
-                                                    <a href="com-property.html">Commercial Property Insurance</a>
-                                                </li>                                               
-                                                <li>
-                                                    <a href="bonds.html">Bonds</a>
-                                                </li>                                                
-                                                <li>
-                                                    <a href="pms-aif.html" class="active">PMS</a>
                                                 </li>                                                 
+                                                <li class="active">
+                                                    <a href="pms-aif.html" class="active">PMS</a>
+                                                </li>    
+                                                <li>
+                                                    <a href="general-insurance.html">Other Insurance</a>
+                                                </li>                                             
+                                                <li>
+                                                    <a href="itr.html">ITR</a>
+                                                </li>                                             
                                             </ul>
                                         </li>                                                              
                                         <li class="nav-item">
@@ -125,6 +122,9 @@
                 </div>
             </div>
         </div></div>
+        <!-- <div class="header_right_bg">
+            <img src="images/top_right_bg.png" alt="">
+        </div> -->
     </div>
 
         <!-- mobile header -->
@@ -185,22 +185,12 @@
 
     <!-- breadcrumb section -->
 
-    <div class="breadcrumb-area services pms-aif section-padding light-bg-1 pb-0">
-        <div class="container header-container">
-            <div class="row justify-content-center">
-                <div class="col-xl-6 col-lg-6 col-md-6 col-12 text-center">
-                    <div class="section-title">
-                        <p>PMS</p>
-                        <h2>We Provide Quality 
-                            Services.</h2>
-                    </div>
-                </div>
-            </div>
-            
-            <div class="row mt-90">
+    <div class="breadcrumb-area services pms-aif">
+        <div class="container">
+            <div class="row">
                 <div class="col-12">
                     <div class="bread-bg">
-                        <img src="images/pms1.jpg" alt="" style="width: 100%;">
+                        <img src="images/pms.png" alt="" style="width: 100%;">
                         <div class="bg-tag">
                             <h2>PMS</h2>
                         </div>
@@ -213,7 +203,7 @@
     <!-- service page -->
 
     <div class="service-page pb-60">
-        <div class="container header-container">
+        <div class="container">
              <div class="col-xl-12">
                  <div class="service-page-content">
                     <h2>Portfolio Management Services (PMS)</h2>
@@ -229,8 +219,8 @@
 
     <!-- contact section -->
 
-    <div class="contact-area section-padding">
-        <div class="container header-container">
+    <div class="contact-area section-padding pt-0">
+        <div class="container">
             <div class="contact-section-inner">
                 <div class="contact-section-content">
                     <h2 class="text-white">Want to work with us?</h2>
@@ -244,7 +234,7 @@
 
     <!-- footer section -->
 
-    <div class="footer-area">
+    <div class="footer-area section-padding light-bg-1">
         <div class="container header-container">
             <div class="row">
                 <div class="col-xl-3 col-lg-3 col-md-5 col-12 wow fadeInUp reveal" data-wow-delay="200ms" style="animation-delay: 200ms;">
@@ -271,11 +261,10 @@
                                <div class="services-list">
                                    <h5>Our Services</h5>
                                    <ul>
+                                       <li><i class="fa-solid fa-check-circle"></i><a href="dmat.html">Demat</a></li>
                                        <li><i class="fa-solid fa-check-circle"></i><a href="mutual-funds.html">Mutual Fund</a></li>
                                        <li><i class="fa-solid fa-check-circle"></i><a href="child-future-saving.html">Child Future Saving</a></li>
                                        <li><i class="fa-solid fa-check-circle"></i><a href="retirement-saving.html">Retirement Planning</a></li>
-                                       
-                                       <li><i class="fa-solid fa-check-circle"></i><a href="bonds.html">Bonds</a></li>
                                        <li><i class="fa-solid fa-check-circle"></i><a href="pms-aif.html">PMS</a></li>
                                    </ul>
                                </div>
@@ -283,11 +272,10 @@
                            <div class="col-md-4">
                                <div class="services-list mt-5 service-list2">
                                    <ul class="pt-4 service2-ul">
-                                       <li><i class="fa-solid fa-check-circle"></i><a href="life-insurance.html">Life Insurance</a></li>
-                                       <li><i class="fa-solid fa-check-circle"></i><a href="health-insurance.html">Health Insurance</a></li>
-                                       <li><i class="fa-solid fa-check-circle"></i><a href="home-insurance.html">Home Insurance</a></li>
-                                       <li><i class="fa-solid fa-check-circle"></i><a href="motor-insurance.html">Motor Insurance</a></li>
-                                       <li><i class="fa-solid fa-check-circle"></i><a href="com-property.html">Commercial Insurance</a></li>
+                                        <li><i class="fa-solid fa-check-circle"></i><a href="health-insurance.html">Health Insurance</a></li>
+                                       <li><i class="fa-solid fa-check-circle"></i><a href="life-insurance.html">Term Plan Insurance</a></li>
+                                       <li><i class="fa-solid fa-check-circle"></i><a href="home-insurance.html">Other Insurance</a></li>
+                                       <li><i class="fa-solid fa-check-circle"></i><a href="com-property.html">ITR Filing</a></li>
                                    </ul>
                                </div>
                            </div>
